--- a/calendar-backend/package.json
+++ b/calendar-backend/package.json
@@ -18,7 +18,7 @@
     "postgresql",
     "drizzle"
   ],
-  "author": "",
+  "author": "Karlo Majer",
   "license": "ISC",
   "dependencies": {
     "drizzle-orm": "^0.33.0",
