--- a/calendar-frontend/package.json
+++ b/calendar-frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "yup": "^1.7.0"
   },
   "devDependencies": {
